; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/b43/extr_main.c_b43_jssi_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/b43/extr_main.c_b43_jssi_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43_wldev = type { i32 }

@B43_SHM_SHARED = common dso_local global i32 0, align 4
@B43_SHM_SH_JSSI0 = common dso_local global i32 0, align 4
@B43_SHM_SH_JSSI1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.b43_wldev*, i32)* @b43_jssi_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @b43_jssi_write(%struct.b43_wldev* %0, i32 %1) #0 {
  %3 = alloca %struct.b43_wldev*, align 8
  %4 = alloca i32, align 4
  store %struct.b43_wldev* %0, %struct.b43_wldev** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.b43_wldev*, %struct.b43_wldev** %3, align 8
  %6 = load i32, i32* @B43_SHM_SHARED, align 4
  %7 = load i32, i32* @B43_SHM_SH_JSSI0, align 4
  %8 = load i32, i32* %4, align 4
  %9 = and i32 %8, 65535
  %10 = call i32 @b43_shm_write16(%struct.b43_wldev* %5, i32 %6, i32 %7, i32 %9)
  %11 = load %struct.b43_wldev*, %struct.b43_wldev** %3, align 8
  %12 = load i32, i32* @B43_SHM_SHARED, align 4
  %13 = load i32, i32* @B43_SHM_SH_JSSI1, align 4
  %14 = load i32, i32* %4, align 4
  %15 = and i32 %14, -65536
  %16 = lshr i32 %15, 16
  %17 = call i32 @b43_shm_write16(%struct.b43_wldev* %11, i32 %12, i32 %13, i32 %16)
  ret void
}

declare dso_local i32 @b43_shm_write16(%struct.b43_wldev*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
